--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@primeuix/themes": "^1.2.3",
     "bootstrap": "^5.3.7",
     "firebase": "^10.14.1",
     "ngxtension": "^5.1.0",
+    "primeicons": "^6.0.1",
+    "primeng": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
