--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@primeuix/themes": "^1.2.3",
+    "boostrap": "^2.0.0",
     "bootstrap": "^5.3.7",
     "firebase": "^10.14.1",
     "ngxtension": "^5.1.0",
