--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@fortawesome/fontawesome-free": "^7.0.0",
     "@primeuix/themes": "^1.2.3",
     "bootstrap": "^5.3.7",
     "firebase": "^10.14.1",
