--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.7",
     "firebase": "^10.14.1",
+    "fontawesome": "^5.6.3",
     "ngxtension": "^5.1.0",
     "primeicons": "^6.0.1",
     "primeng": "^18.0.2",
